# AlphaStriker

./: .env  README.md  install_bot.sh  setup.sh
backend/ai_analysis/: Cargo.toml  bot_loop.rs  core.rs  creator_tracker.rs  creator_tracker_sim.rs  db.rs  decision_engine.rs  gemini_analyzer.py  ia_optimizer.rs  log_scanner.rs  logger.rs  main.rs  metrics.rs  parsing.rs  simulator.rs  state_manager.rs  test_tokens.rs  tx_builder.rs
backend/blockchain/: real_time_analyzer.py  websocket_listener.py
backend/trading/: order_executor.py
frontend/: .env
frontend/src/: LiveActivityPage.js  SettingsPage.js
frontend/src/components/: AIOptimizerDetails.js  AIOptimizerStatus.js  AdvancedMonitoring.js  Backtesting.js  BotTesting.js  ConfigurationInfo.js  Dashboard.js  DetailedStats.js  HealthStatus.js  PerformanceMetrics.js  RealModeStatus.js  StrategySettings.js
solana-ai-trading-bot/: auto_setup.py  install.sh  run.sh
solana-ai-trading-bot/backend/: AIStatusPanel.js  App.js  Navbar.js  README_ARM.md  README_X86_64.md  RealModeStatus.js  Settings.js  decision_module.py  main.py  new_pair_scanner.py  requirements.txt  run_ai_setup.py
solana-ai-trading-bot/backend/ai_analysis/: AIStatusPanel.js  ai_auto_optimizer.py  ai_launcher.py  gemini_agent.py  gemini_analyzer.py  run_ai_agent.py
solana-ai-trading-bot/backend/backtesting/: backtesting_engine.py
solana-ai-trading-bot/backend/blockchain/: creator_monitor.py  token_scanner.py
solana-ai-trading-bot/backend/trading/: decision_module.py  order_executor.py
solana-ai-trading-bot/backend/utils/: solana_utils.py
solana-ai-trading-bot/frontend/: README.md  package.json
solana-ai-trading-bot/frontend/src/: App.js
solana-ai-trading-bot/frontend/src/components/: BacktestCharts.js  Login.js  Settings.js  SimulationDashboard.js
