[package]
name = "alphastriker_bot"
version = "0.1.0"
edition = "2021"
authors = ["Alphastriker Dev Team"]
description = "Un bot de trading AI pour la blockchain Solana"
license = "MIT"
repository = "https://github.com/TwoBro-off/alphastriker"

[dependencies]
# --- Core async + network ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0"
log = "0.4"

# --- Solana SDK stack (mises à jour) ---
solana-sdk = "2.3.1"
solana-client = "2.3.13"
solana-program = "2.3.0"
solana-transaction-status = "2.3.0"
solana-logger = "2.3.1"
borsh = "0.10"

# --- Token metadata + SPL utils (Updated for Compatibility) ---
mpl-token-metadata = "5.1.1" # Upgraded from 1.6.5
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"

# --- Persistence ---
sled = "0.34.7"
atomic-write = "0.2.0"
dashmap = "5.5.3"

# --- Crypto / Memory Security ---
elliptic-curve = "0.12"
curve25519-dalek = "4.1.3"
zeroize = "1.5"

# --- WebSocket + streaming ---
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# --- Web server (REST + metrics) ---
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15.7"

# --- Observability / tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"

# --- Serialization / encoding helpers ---
bs58 = "0.5.1"

# --- Performance profiling ---
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
neon_opt = []

[[bin]]
name = "alphastriker_bot"
path = "main.rs"

[[bin]]
name = "log-uploader"
path = "log_uploader.rs"

[[test]]
name = "ia_optimizer_sim"
path = "tests/ia_optimizer_sim.rs"
